--- a/composer.json
+++ b/composer.json
@@ -80,6 +80,11 @@
         ],
         "oe:ide-helper:generate": [
             "if [ -f ./vendor/bin/oe-eshop-ide_helper ]; then oe-eshop-ide_helper; fi"
+        ],
+        "oe:install:module:paypal": [
+            "composer require oxid-solution-catalysts/paypal-module ^2.6.0",
+            "php vendor/bin/oe-console oe:module:install-configuration source/modules/osc/paypal",
+            "php vendor/bin/oe-console oe:cache:clear"
         ]
     },
     "extra": {
